styles/index.css
* {
    box-sizing: border-box;
}
html, body {
    max-width: 100vw;
    overflow-x: hidden;
}

main {
    width: 600px;
    max-width: 100vw;
    margin: 0 auto;
}




body {
    background-color: #a0d4bc;
    margin: 0;
    font-family: Arial, sans-serif;
}

header {
    padding: 20px;
    display: flex;
    justify-content: space-between;
   
}

div.image img {
    width: 600px; 
    height: auto;

}

div.fotos {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 25px;
    align-items: center;
    margin-left: 35px;
    margin-right: 20px;
    width: 420px;
}

div.content {
    display: grid;
    grid-template-columns: 1fr; /* Apenas uma coluna */
    align-items: start; 
    justify-content: center;
    margin-top: 20px;
    background-color: aliceblue;
    border-radius: 15px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border: 2px solid #a0d4bc; /* Borda verde clara */
    font-size: 20px;
    width: 420px;
}

div.content img {
    width: 200px;
    height: auto;
    justify-self: right; /* Centraliza as imagens horizontalmente */
}

footer {
    margin-top: 30px;
    text-align: center;
}

footer .buton button {
    all: unset;
    background-color: aliceblue;
    padding: 15px 25px;
    font-size: 20px;
    border-radius: 15px;
    cursor: pointer;
    margin-bottom: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
}


/* Estilos para dispositivos móveis */
@media (max-width: 1500px) {
    header {
        display: flex;
        justify-content: space-between;
        margin-left: 20px;
        margin-right: 20px;
        margin-bottom: 20px;
    }

    header img {
        width: 200px; /* Ajuste para telas menores */
        height: auto;   
    }

    div.image img {
        width: 100%; /* Imagem ocupa toda a largura da tela */
        height: auto;
        border-radius: 15px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    }

    div.qrcode img {
        width: 90%; /* Imagem ocupa toda a largura da tela */
        height: auto;
        border-radius: 15px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    }
}

